Se sustituyeron imagenes, se agregaron nuevos estilos y se acomodó el menú

--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
-<body>
-    <h1 class="page_title">Aguakan</h1>
-    
+<body>    
     <div class="side_menu">
         <div class="burger_box">
             <div class="menu-icon-container">
@@ -23,35 +21,25 @@
             </div>
         </div>
         <div class="px-5">
-            <h2 class="menu_title">Aguakan informe de Sostentabilidad 2022</h2>
+            <h2 class="menu_title">Aguakan <br> informe de Sostentabilidad 2022</h2>
             <ul class="list_load">
-                <li class="list_item"><a href="#">Aguakan en cifras</a></li>
-                <li class="list_item"><a href="#">Carta del Director</a></li>
-                <li class="list_item"><a href="#">Somos Aguakan</a></li>
-                <li class="list_item"><a href="#">Planeta</a></li>
-                <li class="list_item"><a href="#">Personas</a></li>
-                <li class="list_item"><a href="#">Prosperidad</a></li>
-                <li class="list_item"><a href="#">Paz</a></li>
-                <li class="list_item"><a href="#">Alianzas</a></li>
-                <li class="list_item"><a href="#">Anexos</a></li>
-                <li class="list_item"><a href="#">Contacto</a></li>
+                <li class="list_item"><a href="#">Contigo todo el año</a></li>
+                <li class="list_item"><a href="#">Obras e inversiones</a></li>
+                <li class="list_item"><a href="#">Isla mujeres</a></li>
+                <li class="list_item"><a href="#">Talento Humano</a></li>
+                <li class="list_item"><a href="#">Atracción de talento</a></li>
             </ul>
         </div>
     </div>
+    <section>
         <div class="container">
-            <div class="row">
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                    <img class="img1" src="recursos/images/Ilustración1.png" alt="arte linea 1">
-                    <img class="img2" src="recursos/images/Ilustración2.png" alt="arte linea 2">
-                    <img class="img3" src="recursos/images/Ilustración3.png" alt="arte linea 3">
-                    <img class="img4" src="recursos/images/Ilustración4.png" alt="arte linea 4">
-                    <img class="img5" src="recursos/images/Imagen1.png" alt="Imagen 1">
-                    <img class="img6" src="recursos/images/Imagen2.png" alt="Imagen 2">
-                    <img class="img7" src="recursos/images/Imagen3.png" alt="">
-                    <img class="logo" src="recursos/images/logo-aguakan.png" alt="">
-                </div>
-            </div>
+            <img class="img1 fade-in-image" src="recursos/images/Imagen01.png" alt="">
+            <img class="img2 fade-in-image" src="recursos/images/Imagen02.png" alt="">
+            <img class="img3 fade-in-image" src="recursos/images/Imagen03.png" alt="">
+            <h1>Informe Anual 2022</h1>
         </div>
+    </section>
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="code.js"></script>
 </body>
